--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
 - Implement notifications using new context api
-- Implement sign up page
+- Implement drivers / customers sign up UI
+  - Implement sync + async FIELD validation
+- Implement drivers list page
 - Implement restoring password flow
+- Migrate react form library
+- Take the advantage of the new React router in the multistep checkout. When every step should have it's own url probably but the page should remain the same
+- Implement e2e tests
+
+- Keep hocs in modules?
+- Or for example keep "should authenticated" logic in modules, and use generic hocs for authentication, authorization, which will take that logic.
